SPD-2373 Adding package-lock.json for git actions builds
Update package-lock for git action builds

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "graphql-to-mongodb",
+  "name": "graphql-to-mongodb-spy",
   "version": "1.6.5",
   "description": "Generic run-time generation of input filter types for existing graphql types, and parsing of said input types into MongoDB queries",
   "main": "lib/index.js",
