--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -87,7 +87,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           registry-url: https://npm.pkg.github.com
-          scope: "@ihm-software"
+          scope: '${{ github.actor }}'
 
       - name: Release new tag version
         if: ${{ success() }}
