--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,14 +78,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: workspace
-
-      - name: Setup Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-          registry-url: https://npm.pkg.github.com
-          scope: '${{ github.actor }}'
-
+      
       - name: Release new tag version
         if: ${{ success() }}
         id: release-version
@@ -95,7 +88,14 @@ jobs:
           DEFAULT_BUMP: patch
           CUSTOM_TAG: ${{ needs.build.outputs.new_tag }}
           RELEASE_BRANCHES: .*
-
+      
+      - name: Setup Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+          registry-url: 'https://npm.pkg.github.com'
+          scope: '${{ github.actor }}'
+        
       - name: Publish new package version
         if: ${{ success() }}
         run: npm publish
