changed the names and reverted --access
Changed names and reverted --access

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -101,6 +101,6 @@ jobs:
 
       - name: Publish new package version
         if: ${{ success() }}
-        run: npm publish --access restricted
+        run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
