--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,6 +98,6 @@ jobs:
         
       - name: Publish new package version
         if: ${{ success() }}
-        run: npm publish
+        run: npm publish --acces public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
